--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,14 @@
 *
 {
-  font-size: 1.6vw;
+  font-size: 4vw;
 }
 .rotate-left
 {
+  margin: auto;
   transform: rotate(90deg);
 }
 .rotate-right{
+  margin: auto;
   transform: rotate(-90deg);
   -webkit-transform: rotate(-90deg);
   -moz-transform: rotate(-90deg);
@@ -23,5 +25,19 @@
 .score p
 {
   color:black;
-  font-size: 5vw !important;
+  font-size: 8vw !important;
+  margin: auto;
+}
+html {
+  /* Rotate the content container */
+  transform: rotate(-90deg);
+  transform-origin: left top;
+  /* Set content width to viewport height */
+  width: 100vh;
+  /* Set content height to viewport width */
+  height: 100vh;
+  overflow: hidden;
+  position: absolute;
+  top: 100%;
+  left: 0;
 }
